# mangowc

./: README.md  config.conf  flake.nix  format.sh  meson.build
.github/ISSUE_TEMPLATE/: bug_report.md
mmsg/: meson.build  mmsg.c
mmsg/protocols/: dwl-ipc-unstable-v2.xml
mmsg/src/: mmsg.c
nix/: default.nix  hm-modules.nix  nixos-modules.nix
protocols/: dwl-ipc-unstable-v2.xml
src/: mango.c  maomao.c
src/animation/: client.h  common.h  layer.h  tag.h
src/client/: client.h
src/common/: util.c  util.h
src/config/: parse_config.h  preset.h
src/dispatch/: action.h  bind_declare.h  bind_define.h
src/ext-protocol/: dwl-ipc.h  ext-workspace.h  foreign-toplevel.h  text-input.h  wlr_ext_workspace_v1.c  wlr_ext_workspace_v1.h
src/fetch/: client.h  common.h  monitor.h
src/layout/: arrange.h  horizontal.h  layout.h  vertical.h
